web/css/main.css
.backend-login-form {
    margin-top: 10%;
}

.product-thumbnail {
    width: 50px;
}

.product-tile {
    padding-left: 20px;
    padding-right: 20px;
    margin-bottom: 10px;
    border: 1px solid black;
}

.product-tile img {
    max-width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    display: block;
    margin: auto;
}

.star-filled {
    color: #2aabd2;
}

.star-not-filled {
    color: #8c8c8c;
}

.ratings-count {
    color: #8c8c8c;
    font-size: 12px;
    font-style: italic;
}

.price {
    font-size: 18px;
    font-weight: bold;
}

#items-per-page {
    width:auto;
    display:inline-block;
}

.panel h2 {
    margin: 0;
}

#cartModal table {
    color: black;
}

